-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
5.15.0
-
31a1b3280cf076fcdb45a658d0140af3737be138 (qt/qtbase/dev) 7c4efe0d7533a67c08b133eec8ee109176330df7 (qt/qtbase/5.15)
QGroupBox with fusion style seems to reserve vertical space for a title even when there is none. Whenever there is no title the group box looks otherwise fine but the "padding" top side seems to be a bit excessive.
In comparison with windowsvista style the height of the QGroupBox would adjust accordingly if there is no title.
Steps to reproduce the issue:
- Run the attached project with -style fusion
- To compare how it looks with a title run with -style fusion -t